cookie problem solved. Cookie will now push the navbar instead of overlaping

--- a/ecolex/static/bootstrap/less/layout.less
+++ b/ecolex/static/bootstrap/less/layout.less
@@ -264,3 +264,10 @@ padding:10px 10px 10px 10px;
 #regions_div button {
   margin-bottom: 1em;
 }
+
+
+
+.cookie-message {
+      position: relative!important;
+      
+}
